making filterItem,sortFiled,sortDirection as not required field
